--- a/base_di_partenza/assets/css/style.css
+++ b/base_di_partenza/assets/css/style.css
@@ -119,17 +119,20 @@ h3 {
 }
 footer {
     padding: 2em;
-    font-size: 0.7em;
+    font-size: 0.8em;
     padding-left: 1em;
 }
-footer p {
+footer .content p {
+    font-family: roboto,sans-serif;
+    font-weight: 500;
     border: 1px solid rgb(208, 204, 204);
-    width: 20%;
     padding: 0.5em;
     text-align: center;
     margin: 0.3em;
+    align-content: center;
+
 }
-footer div {
+footer .content {
     display: flex;
     flex-wrap: wrap;
     width: 100%;
@@ -143,3 +146,140 @@ hr {
     right: 2%;
     width: 95%;
 }
+footer section {
+    display: flex;
+    flex-wrap: wrap;
+}
+footer section p {
+    padding: 0.8em;
+    font-family: roboto,san sans-serif;
+    font-weight:500;
+}
+
+.all-footer .scri {
+    display: inline;
+    vertical-align: super;
+    font-weight: bold;
+}
+.all-footer .pad {
+    font-weight: 700;
+    font-size: 1.6em;
+    display: inline;
+} 
+.all-footer .size {
+    width: 17px;
+    border-radius: 30px;
+}
+.all-footer .fusione{
+    width: 20px;
+    vertical-align: middle;
+}
+.all-footer .news{
+    background-color: #eae6e6;
+    border-radius: 20px;
+    padding: 0.3em;
+    text-align: center;
+}
+.move img{
+    position: absolute;
+    bottom: -0.2em;
+    left: 140%;
+    width: 100%; 
+
+}
+.move{
+    position: relative;
+    width: 160px;
+    height: auto
+}
+.all-footer{
+    padding-left: 0.3em;
+    font-size: 0.7em;
+    font-family: roboto, sans-serif
+}
+.com{
+    padding-top: 0.5em;
+    padding-bottom: 0.9em;
+    font-size: 1.2em;
+}
+.book{
+    width: 4%;
+   padding-left: 7em;
+   vertical-align: middle;
+}
+.fusione{
+    width: 4%;
+}
+.first{
+    margin-bottom: 0.3em;
+    margin-top: 0.5em;
+}
+.second{
+    font-size: 0.8em;
+    margin-top: 1em;
+}
+#Taylor{
+    position: relative;
+    width: 160px;
+    height: auto
+}
+#Taylor img {
+    position: absolute;
+    bottom: 0.6em;
+    left: 140%;
+    width: 100%; 
+}
+#vignetta img{
+    position: absolute;
+    bottom: 0em;
+    left: 140%;
+    width: 100%; 
+}
+#vignetta{
+    position: relative;
+    width: 160px;
+    height: auto
+}
+.book-maker{
+    width: 4%;
+   vertical-align: middle;
+}
+#mark{
+    padding-left: 3em;
+    width: 4%;
+   vertical-align: middle;
+}
+#paesaggio img{
+    position: absolute;
+    bottom: 0.3em;
+    left: 140%;
+    width: 100%; 
+}
+#paesaggio{
+    position: relative;
+    width: 160px;
+    height: auto
+}
+#book2{
+    padding-left: 5em;
+    width: 4%;
+   vertical-align: middle;
+}
+#pallina{
+    width: 17px;
+    border-radius: 5px;
+}
+#lavagna img{
+    position: absolute;
+    bottom: 0.8em;
+    left: 140%;
+    width: 100%; 
+}
+#lavagna{
+    position: relative;
+    width: 160px;
+    height: auto
+}
+ footer article{
+    margin-bottom: 2.5em;
+ }
