--- a/base_di_partenza/assets/css/style.css
+++ b/base_di_partenza/assets/css/style.css
@@ -1,396 +1,483 @@
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=Roboto:ital,wght@0,100;0,400;1,100&family=Spectral&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=Spectral&display=swap');
 
-svg,.hide,.nascondino,#nascondino{
-    display: none;
+svg,
+.hide,
+.nascondino,
+#nascondino,
+.only {
+  display: none;
 }
 
 nav {
-    font-family: Roboto,sans-serif;
-    display: flex;
-    justify-content: space-between;
-    padding: 1em;
-    background-color: #ffc017;
-    border-bottom: 2px solid black;
-    align-items: center; 
-    font-size: 0.8em;
+  font-family: Roboto, sans-serif;
+  display: flex;
+  justify-content: space-between;
+  padding: 1em;
+  background-color: #ffc017;
+  border-bottom: 2px solid black;
+  align-items: center;
+  font-size: 0.8em;
 }
 nav img {
-    width: 36%
+  width: 36%;
 }
 nav a {
-    text-decoration: none;
-    color: #191919;
+  text-decoration: none;
+  color: #191919;
 }
- #last{
-    position: relative;
-    right: 9%;
-    color: white;
-    background-color: black;
-    border-radius: 25px;
-    padding: 0.9em;
+#last {
+  position: relative;
+  right: 9%;
+  color: white;
+  background-color: black;
+  border-radius: 25px;
+  padding: 0.9em;
 }
 header {
-    background-color: #ffc017;
-    border-bottom: 1px solid black;
-    padding-left: 1em;
+  background-color: #ffc017;
+  border-bottom: 1px solid black;
+  padding-left: 1em;
 }
 h1 {
-    font-family: Spectral, serif;
-    font-size: 3.3em;
-    padding-top: 1em;
-    padding-bottom: 0.4em;
+  font-family: Spectral, serif;
+  font-size: 3.3em;
+  padding-top: 1em;
+  padding-bottom: 0.4em;
 }
 #para {
-    font-family: Roboto, sans-serif;
-    padding-bottom: 2em;
+  font-family: Roboto, sans-serif;
+  padding-bottom: 2em;
 }
 header div {
-    width: 32%;
-    background-color: black;
-    border-radius: 25px;
-    padding: 0.5em;
-    text-align: center;
-    margin-bottom: 5em;
-    font-family: Roboto, sans-serif;
-
+  width: 32%;
+  background-color: black;
+  border-radius: 25px;
+  padding: 0.5em;
+  text-align: center;
+  margin-bottom: 5em;
+  font-family: Roboto, sans-serif;
 }
 header a {
-    text-decoration: none;
-    color: white;
+  text-decoration: none;
+  color: white;
 }
 main {
-    padding: 1em;
-    font-size: 0.7em;
-    border-bottom: 1px solid rgb(215, 213, 213);
+  padding: 1em;
+  font-size: 0.7em;
+  border-bottom: 1px solid rgb(215, 213, 213);
 }
 #heading {
-    display: flex;
-    align-items: center
+  display: flex;
+  align-items: center;
 }
 #heading img {
-    padding-right: 1em;
-    width: 25px;
+  padding-right: 1em;
+  width: 25px;
 }
 h2 {
-    font-family: roboto, sans-serif;
-    font-weight: bolder;
+  font-family: roboto, sans-serif;
+  font-weight: bolder;
 }
 .all {
-    display: flex;
+  display: flex;
 }
 .numero {
-    font-family: Roboto, sans-serif;
-    font-size: 2em;
-    padding-right: 1em;
-    opacity: 0.2;
-    font-weight: 600;
+  font-family: Roboto, sans-serif;
+  font-size: 2em;
+  padding-right: 1em;
+  opacity: 0.2;
+  font-weight: 600;
 }
 .all img {
-    border-radius: 30px;
-    width: 18px;
+  border-radius: 30px;
+  width: 18px;
 }
-.par{
-    font-size: 0.9em;
-    display: inline;
-    vertical-align: super;
-    font-weight: bold;
+.par {
+  font-size: 0.9em;
+  display: inline;
+  vertical-align: super;
+  font-weight: bold;
 }
-.space{
-    padding-top: 1em;
-    display: flex;
-    justify-content: space-between;
+.space {
+  padding-top: 1em;
+  display: flex;
+  justify-content: space-between;
 }
 .space1 {
-    padding-top: 0.5em;
-    font-weight: bold;
+  padding-top: 0.5em;
+  font-weight: bold;
 }
-.font{
-    font-family: roboto,san sans-serif;
-    padding-top: 0.2em;
+.font {
+  font-family: roboto, san sans-serif;
+  padding-top: 0.2em;
 }
-.all-section{
-    margin-bottom: 2em;
+.all-section {
+  margin-bottom: 2em;
 }
 h3 {
-    font-family: roboto, sans-serif;
-    font-weight: bold;
-    padding-top: 2em;
-    padding-bottom: 1em;
-    padding-left: 0.5em;
+  font-family: roboto, sans-serif;
+  font-weight: bold;
+  padding-top: 2em;
+  padding-bottom: 1em;
+  padding-left: 0.5em;
 }
 footer {
-    padding: 2em;
-    font-size: 0.8em;
-    padding-left: 1em;
+  padding: 2em;
+  font-size: 0.8em;
+  padding-left: 1em;
 }
 footer .content p {
-    font-family: roboto,sans-serif;
-    font-weight: 500;
-    border: 1px solid rgb(208, 204, 204);
-    padding: 0.5em;
-    text-align: center;
-    margin: 0.3em;
-    align-content: center;
-
+  font-family: roboto, sans-serif;
+  font-weight: 500;
+  border: 1px solid rgb(208, 204, 204);
+  padding: 0.5em;
+  text-align: center;
+  margin: 0.3em;
+  align-content: center;
 }
 footer .content {
-    display: flex;
-    flex-wrap: wrap;
-    width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
 }
-.write{
-    flex-basis: 10%;
+.write {
+  flex-basis: 10%;
 }
 hr {
-    margin-top: 2em;
-    margin-bottom: 2em;
-    color: rgb(215, 213, 213);
-    position: relative;
-    right: 2%;
-    width: 95%;
+  margin-top: 2em;
+  margin-bottom: 2em;
+  color: rgb(215, 213, 213);
+  position: relative;
+  right: 2%;
+  width: 95%;
 }
 footer section {
-    display: flex;
-    flex-wrap: wrap;
+  display: flex;
+  flex-wrap: wrap;
 }
 footer section p {
-    padding: 0.8em;
-    font-family: roboto,san sans-serif;
-    font-weight:500;
+  padding: 0.8em;
+  font-family: roboto, san sans-serif;
+  font-weight: 500;
 }
 
 .all-footer .scri {
-    display: inline;
-    vertical-align: super;
-    font-weight: bold;
+  display: inline;
+  vertical-align: super;
+  font-weight: bold;
 }
 .all-footer .pad {
-    font-weight: 700;
-    font-size: 1.6em;
-    display: inline;
-} 
+  font-weight: 700;
+  font-size: 1.6em;
+  display: inline;
+}
 .all-footer .size {
-    width: 17px;
-    border-radius: 30px;
+  width: 17px;
+  border-radius: 30px;
 }
-.all-footer .fusione{
-    width: 20px;
-    vertical-align: middle;
+.all-footer .fusione {
+  width: 20px;
+  vertical-align: middle;
 }
-.all-footer .news{
-    background-color: #eae6e6;
-    border-radius: 20px;
-    padding: 0.3em;
-    text-align: center;
+.all-footer .news {
+  background-color: #eae6e6;
+  border-radius: 20px;
+  padding: 0.3em;
+  text-align: center;
 }
-.move img{
-    position: absolute;
-    bottom: -0.2em;
-    left: 140%;
-    width: 100%; 
-
+.move img {
+  position: absolute;
+  bottom: -0.2em;
+  left: 140%;
+  width: 100%;
 }
-.move{
-    position: relative;
-    width: 160px;
-    height: auto
+.move {
+  position: relative;
+  width: 160px;
+  height: auto;
 }
-.all-footer{
-    padding-left: 0.3em;
-    font-size: 0.7em;
-    font-family: roboto, sans-serif
+.all-footer {
+  padding-left: 0.3em;
+  font-size: 0.7em;
+  font-family: roboto, sans-serif;
 }
-.com{
-    padding-top: 0.5em;
-    padding-bottom: 0.9em;
-    font-size: 1.2em;
+.com {
+  padding-top: 0.5em;
+  padding-bottom: 0.9em;
+  font-size: 1.2em;
 }
-.book{
-    width: 4%;
-   padding-left: 7em;
-   vertical-align: middle;
+.book {
+  width: 4%;
+  padding-left: 7em;
+  vertical-align: middle;
 }
-.fusione{
-    width: 4%;
+.fusione {
+  width: 4%;
 }
-.first{
-    margin-bottom: 0.3em;
-    margin-top: 0.5em;
+.first {
+  margin-bottom: 0.3em;
+  margin-top: 0.5em;
 }
-.second{
-    font-size: 0.8em;
-    margin-top: 1em;
+.second {
+  font-size: 0.8em;
+  margin-top: 1em;
 }
-#Taylor{
-    position: relative;
-    width: 160px;
-    height: auto
+#Taylor {
+  position: relative;
+  width: 160px;
+  height: auto;
 }
 #Taylor img {
-    position: absolute;
-    bottom: 0.6em;
-    left: 140%;
-    width: 100%; 
+  position: absolute;
+  bottom: 0.6em;
+  left: 140%;
+  width: 100%;
 }
-#vignetta img{
-    position: absolute;
-    bottom: 0em;
-    left: 140%;
-    width: 100%; 
+#vignetta img {
+  position: absolute;
+  bottom: 0em;
+  left: 140%;
+  width: 100%;
 }
-#vignetta{
-    position: relative;
-    width: 160px;
-    height: auto
+#vignetta {
+  position: relative;
+  width: 160px;
+  height: auto;
 }
-.book-maker{
-    width: 4%;
-   vertical-align: middle;
+.book-maker {
+  width: 4%;
+  vertical-align: middle;
 }
-#mark{
-    padding-left: 3em;
-    width: 4%;
-   vertical-align: middle;
+#mark {
+  padding-left: 3em;
+  width: 4%;
+  vertical-align: middle;
 }
-#paesaggio img{
-    position: absolute;
-    bottom: 0.3em;
-    left: 140%;
-    width: 100%; 
+#paesaggio img {
+  position: absolute;
+  bottom: 0.3em;
+  left: 140%;
+  width: 100%;
 }
-#paesaggio{
-    position: relative;
-    width: 160px;
-    height: auto
+#paesaggio {
+  position: relative;
+  width: 160px;
+  height: auto;
 }
-#book2{
-    padding-left: 5em;
-    width: 4%;
-   vertical-align: middle;
+#book2 {
+  padding-left: 5em;
+  width: 4%;
+  vertical-align: middle;
 }
-#pallina{
-    width: 17px;
-    border-radius: 5px;
+#pallina {
+  width: 17px;
+  border-radius: 5px;
 }
-.lavagna img{
-    position: absolute;
-    bottom: 0.8em;
-    left: 140%;
-    width: 100%; 
+.lavagna img {
+  position: absolute;
+  bottom: 0.8em;
+  left: 140%;
+  width: 100%;
 }
-.lavagna{
-    position: relative;
-    width: 160px;
-    height: auto
+.lavagna {
+  position: relative;
+  width: 160px;
+  height: auto;
 }
- footer article{
-    margin-bottom: 2.5em;
- }
- footer span,.content,.space{
-    opacity: 0.5;
- }
- footer section{
-    opacity: 0.5;
- }
- @media screen and (min-width:700px) {
-    .medium {
-        display: inline-block;
+footer article {
+  margin-bottom: 2.5em;
+}
+footer span,
+.content,
+.space {
+  opacity: 0.5;
+}
+footer section {
+  opacity: 0.5;
+}
+@media screen and (min-width: 700px) {
+  .medium {
+    display: inline-block;
     height: 63%;
     position: absolute;
     top: 1%;
     left: 57%;
-    }
-.hide{
+  }
+  .hide {
     display: inline-block;
-}
-nav img {
+  }
+  nav img {
     width: 21%;
-    margin-left: 2em
-}
-.primo{
+    margin-left: 2em;
+  }
+  .primo {
     display: flex;
     justify-content: space-between;
     width: 41%;
-}
-#last{
-     right: 5%;
- padding: 0.7em 1em;
-}
-h1{
+  }
+  #last {
+    right: 5%;
+    padding: 0.7em 1em;
+  }
+  h1 {
     font-size: 4.3em;
-}
-#para{
+  }
+  #para {
     font-size: 1.3em;
-}
-header div {
-    width: 25%
-}
-main {
+  }
+  header div {
+    width: 25%;
+  }
+  main {
     display: flex;
     flex-wrap: wrap;
     gap: 1em;
-}
-.all-section,.all{ 
+  }
+  .all-section,
+  .all {
     flex: 1 1 calc(50% - 1em);
     box-sizing: border-box;
-    max-width: calc(70% - 1em)
-}
-#heading {
+    max-width: calc(70% - 1em);
+  }
+  #heading {
     margin-top: 2em;
     width: 100%;
-}
-h3{
+  }
+  h3 {
     padding-top: 1.5em;
     font-size: 1.1em;
-}
-.content,#first{
+  }
+  .content,
+  #first {
     width: 85%;
     font-size: 1.1em;
-}
-.nascondino,#nascondino{
+  }
+  .nascondino,
+  #nascondino {
     display: inline;
-}
-.visible,#visible{
+  }
+  .visible,
+  #visible {
     display: none;
-}
-footer span {
-    font-size: 1.1em
-}
-#book2,.book-maker,#mark,.book{
+  }
+  footer span {
+    font-size: 1.1em;
+  }
+  #book2,
+  .book-maker,
+  #mark,
+  .book {
     position: absolute;
     right: 45%;
     width: 3%;
-}
-.lavagna,.move {
-position: absolute;
-left: 29%;
-}
-
- #paesaggio,#vignetta,#Taylor{
+  }
+  .lavagna,
+  .move {
     position: absolute;
-left: 29%;
- }
- .move {
+    left: 29%;
+  }
+
+  #paesaggio,
+  #vignetta,
+  #Taylor {
+    position: absolute;
+    left: 29%;
+  }
+  .move {
     top: 110em;
- }
- #taylor{
+  }
+  #taylor {
     top: 124em;
- }
- #paesaggio img {
+  }
+  #paesaggio img {
     bottom: -1em;
- }
-.lavagna img {
+  }
+  .lavagna img {
     bottom: 0em;
     top: -9em;
-}
-header,footer,main,footer{
+  }
+  header,
+  footer,
+  main,
+  footer {
     padding-left: 2em;
-}
-hr {
+  }
+  hr {
     margin-bottom: 1em;
+  }
+  .second {
+    font-size: 1em;
+  }
 }
-.second{
-    font-size: 1.1em;
-}
+@media screen and (min-width: 1100px) {
+  nav img {
+    width: 12%;
+    padding-left: 3em;
+  }
+  .primo {
+    padding-left: 14em;
+    justify-content: space-evenly;
+    width: 27%;
+  }
+  .last {
+    padding: 0.7em 1em;
+    right: 7%;
+  }
+  header {
+    padding-left: 8em;
+  }
+  h1 {
+    font-size: 5.3em;
+  }
+  .all-section {
+    flex: 1 1 calc(30% - 1em);
+    box-sizing: border-box;
+    max-width: calc(90% - 1em);
+  }
+  .space {
+    display: inline;
+  }
+  .space1 {
+    padding-bottom: 1em;
+  }
+  .medium {
+    width: 51%;
+    height: 55%;
+  }
+  .only {
+    display: inline;
+    vertical-align: middle;
+  }
+  footer {
+    display: flex;
+    flex-direction: row-reverse;
+  }
+  #late {
+    width: 155%;
+  }
+  #paesaggio,
+  #vignetta,
+  #Taylor {
+    position: absolute;
+    left: 20%;
+  }
+  .lavagna,
+  .move {
+    position: absolute;
+    left: 20%;
+  }
+  .move {
+    top: 85em;
+
+  }
+  #book2,
+  .book-maker,
+  #mark,
+  .book {
+    position: absolute;
+    right: 61%;
+    width: 2%;
+  }
+  
 }
